Projects btn-text Links no longer full screen width on mobile
changed width to fit-content so that whitespace after links is not included in the links' tappable area

--- a/css/projects.css
+++ b/css/projects.css
@@ -82,7 +82,10 @@
   background: var(--grey-light);
   clip-path: polygon(0 0, 100% 0, 0 var(--main-padding));
 }
-#projects .btn-text { margin-bottom: 0.5em; }
+#projects .btn-text {
+  width: fit-content;
+  margin-bottom: 0.5em;
+}
 
 @media (min-aspect-ratio: 1/1) {
   /* two column layout */
